fix some alignments

--- a/src/customStyles/developerStyle/devDescription.css
+++ b/src/customStyles/developerStyle/devDescription.css
@@ -1,90 +1,90 @@
 .developerTitle {
-    font-family: "Averta-Regular";
-    font-size: 24px;
-    font-weight: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    margin-bottom: 115px;
-    margin-top: 115px;
-    color: #394952;
-    width: 100%;
-  }
-.squareWrap{
-    display:flex;
+  font-family: "Averta-Regular";
+  font-size: 24px;
+  font-weight: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  margin-bottom: 115px;
+  margin-top: 115px;
+  color: #394952;
+  width: 100%;
 }
- .squareWrapColumn{
-     display: flex;
-     flex-direction:column;
- }
-  #fixOnScroll {
-    background-color:#00adee;
-    color: #FFF;
-    margin: 0;
-    padding: 2px 0 0 12px;
-    position: -webkit-sticky;
-    position: sticky;
-    top: -1px;
-    width: 100%;
-    max-height: 1200px;
+.squareWrap {
+  display: flex;
+}
+.squareWrapColumn {
+  display: flex;
+  flex-direction: column;
+}
+#fixOnScroll {
+  background-color: #00adee;
+  color: #fff;
+  margin: 0;
+  padding: 2px 0 0 12px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: -1px;
+  width: 100%;
+  max-height: 1200px;
 }
 
 .scrollLine {
-    width: 343px;
-    height: 2px;
-    border: solid 1px #8de0ff;
+  width: 343px;
+  height: 2px;
+  border: solid 1px #8de0ff;
 }
 .scrollLinksWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    margin-left: 3em;
-    margin-top: 2em;
-    margin-right: 3em;
-    font-family: Averta-Light;
-    font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  margin-left: 3em;
+  margin-top: 2em;
+  margin-right: 3em;
+  font-family: Averta-Light;
+  font-size: 14px;
 }
 .scrollOval {
-    width: 30px;
-    height: 30px;
-    background-color: #8de0ff;
-    border-radius: 50%;
-    margin-right: 1em;
-    margin-bottom: 0em;
-    transition: all .2s cubic-bezier(0.1,0,0.3,0.9);
+  width: 30px;
+  height: 30px;
+  background-color: #8de0ff;
+  border-radius: 50%;
+  margin-right: 1em;
+  margin-bottom: 0em;
+  transition: all 0.2s cubic-bezier(0.1, 0, 0.3, 0.9);
 }
 
 .scrollLink:hover .scrollOval {
-    background-color: white;
-    background-image: url('../../images/icon-check.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    transition: all .2s cubic-bezier(0.1,0,0.3,0.9);
+  background-color: white;
+  background-image: url("../../images/icon-check.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: all 0.2s cubic-bezier(0.1, 0, 0.3, 0.9);
 }
 
 .scrollLink {
-    display: inline-flex;
-    margin-bottom: 20px;
-    margin-top: 20px;
+  display: inline-flex;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .linkText {
-    margin-top: 0.45em;
+  margin-top: 0.45em;
 }
 
-.white{
-width: 100%;
-height: 408px;
-background-color: white;
+.white {
+  width: 100%;
+  height: 408px;
+  background-color: white;
 }
-.blue{
-    width: 100%;
-    height: 408px;
-    background-color:#00aeef;
-} 
-.sidebarText{
-    font-family: 'Averta-Semibold';
+.blue {
+  width: 100%;
+  height: 408px;
+  background-color: #00aeef;
+}
+.sidebarText {
+  font-family: "Averta-Semibold";
   font-size: 14px;
   font-weight: 300;
   font-style: normal;
@@ -93,53 +93,132 @@ background-color: white;
   letter-spacing: normal;
   text-align: left;
   color: #ffffff;
-  padding-left:195px;
-  padding-right:195px;
+  padding-left: 195px;
+  padding-right: 195px;
   padding-top: 86px;
 }
- .developerWrapper {
-    margin-right: 0px ;
-    margin-left: 0px ;
-    margin-top: 115px;
-  } 
-  .titleOnWhite{
-    font-family: 'Averta-Regular';
-    font-size: 20px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #394952;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-  .titleOnWhite.whiteDivAlign{
-    color: white;
+.developerWrapper {
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-top: 115px;
 }
-.titleOnWhite.devText{
-    color: white;
+.titleOnWhite {
+  font-family: "Averta-Regular";
+  font-size: 20px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #394952;
+  padding-left: 60px;
+  padding-right: 60px;
 }
-  .devText{
-    font-family: 'Averta-Light';
-    font-size: 14px;
-    font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.86;
-    letter-spacing: normal;
-    text-align: left;
-    color: #394952;
-    padding-left: 60px;
-    padding-right: 60px;
+.titleOnWhite.whiteDivAlign {
+  color: white;
+}
+.titleOnWhite.devText {
+  color: white;
+}
+.devText {
+  font-family: "Averta-Light";
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.86;
+  letter-spacing: normal;
+  text-align: left;
+  color: #394952;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+.divAlign {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.devImages {
+  width: 100%;
+  height: 100%;
+}
+.bigContainer {
+  display: flex;
+}
+@media (max-width: 575px) {
+  .bigContainer {
+    display: flex;
+    flex-direction: column;
   }
-  .divAlign{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+  .squareWrap {
+    display: flex;
+    flex-direction: column;
   }
-  .devImages{
-    width: 100%;
-    height: 100%;
+  #fixOnScroll {
+    position: relative;
   }
+  .scrollLinksWrapper {
+    width: 70%;
+  }
+  .scrollLine {
+    width: 130%;
+  }
+  .scrollLinksWrapper {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  .white{
+      height: 350px;
+  }
+  .blue{
+      height: 350px;
+  }
+  .devImages {
+    width: 70%;
+  }
+  .white {
+    display: flex;
+    justify-content: center;
+  }
+  .blue {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (min-width: 576px) and (max-width: 1150px) {
+  .bigContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  #fixOnScroll {
+    position: relative;
+  }
+  .devText {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .scrollLinksWrapper {
+    width: 70%;
+  }
+  .scrollLine {
+    width: 130%;
+  }
+  .scrollLinksWrapper {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+}
+@media (min-width: 1550px) {
+  .devImages {
+    width: 70%;
+  }
+  .white {
+    display: flex;
+    justify-content: center;
+  }
+  .blue {
+    display: flex;
+    justify-content: center;
+  }
+}
